Document the dommemstat command in the virsh man page
* tools/virsh.pod: Provide a basic mention of the dommemstat command in
  the virsh man page.

--- a/tools/virsh.pod
+++ b/tools/virsh.pod
@@ -257,6 +257,10 @@ Get device block stats for a running domain.
 
 Get network interface stats for a running domain.
 
+=item B<dommemstat> I<domain>
+
+Get memory stats for a running domain.
+
 =item B<dominfo> I<domain-id>
 
 Returns basic information about the domain.
