AUTHORS: add recent contributors

--- a/AUTHORS
+++ b/AUTHORS
@@ -89,6 +89,11 @@ Patches have also been contributed by:
   Steve Yarmie         <steve.yarmie@gmail.com>
   Dan Kenigsberg       <danken@redhat.com>
   Yuji NISHIDA         <nishidy@nict.go.jp>
+  Eric Blake           <eblake@redhat.com>
+  Dustin Xiong         <x_k_123@hotmail.com>
+  Rolf Eike Beer       <eike@sf-mail.de>
+  Stefan Berger        <stefanb@us.ibm.com>
+  Wolfgang Mauerer     <wolfgang.mauerer@siemens.com>
 
   [....send patches to get your name here....]
 
