virsh: add 'exit' as an alias for 'quit'
Call me lazy: some shells use exit (e.g. sh), others use quit (e.g. ftp),
but I never remember which.  So it's faster to write a patch to make
virsh take both than it is to take a 50-50 guess, and get it wrong
in half of my attempts.

* tools/virsh.c (commands): Add 'exit'.
* tools/virsh.pod: Document it.

--- a/tools/virsh.pod
+++ b/tools/virsh.pod
@@ -65,7 +65,7 @@ The following commands are generic i.e. not specific to a domain.
 This prints a small synopsis about all commands available for B<virsh>
 B<help> I<command> will print out a detailed help message on that command.
 
-=item B<quit>
+=item B<quit>, B<exit>
 
 quit this interactive terminal
 
