maint: update AUTHORS
* AUTHORS: Add recent contributors.

--- a/AUTHORS
+++ b/AUTHORS
@@ -95,6 +95,9 @@ Patches have also been contributed by:
   Rolf Eike Beer       <eike@sf-mail.de>
   Wolfgang Mauerer     <wolfgang.mauerer@siemens.com>
   Philipp Hahn         <hahn@univention.de>
+  Ed Swierk            <eswierk@aristanetworks.com>
+  Paolo Smiraglia      <paolo.smiraglia@gmail.com>
+  Sharadha Prabhakar   <sharadha.prabhakar@citrix.com>
 
   [....send patches to get your name here....]
 
