maint: update AUTHORS with recent contributors
git shortlog $(git log -1 --format=%H AUTHORS).. | grep -v "^ "

then add missing entries to AUTHORS.

* AUTHORS: Update.

--- a/AUTHORS
+++ b/AUTHORS
@@ -98,6 +98,13 @@ Patches have also been contributed by:
   Ed Swierk            <eswierk@aristanetworks.com>
   Paolo Smiraglia      <paolo.smiraglia@gmail.com>
   Sharadha Prabhakar   <sharadha.prabhakar@citrix.com>
+  Chris Wong           <wongc-redhat@hoku.net>
+  Daniel Berteaud      <daniel@firewall-services.com>
+  Dustin Kirkland      <kirkland@canonical.com>
+  Luiz Capitulino      <lcapitulino@redhat.com>
+  Ryan Harper          <ryanh@us.ibm.com>
+  Spencer Shimko       <sshimko@tresys.com>
+  redshift             <redshift@gmx.com>
 
   [....send patches to get your name here....]
 
