maint: update AUTHORS
* AUTHORS: Use preferred name.

Signed-off-by: Eric Blake <eblake@redhat.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -104,7 +104,7 @@ Patches have also been contributed by:
   Luiz Capitulino      <lcapitulino@redhat.com>
   Ryan Harper          <ryanh@us.ibm.com>
   Spencer Shimko       <sshimko@tresys.com>
-  redshift             <redshift@gmx.com>
+  Marco Bozzolan       <bozzolan@gmail.com>
 
   [....send patches to get your name here....]
 
