Add new domblkinfo command to virsh
  virsh # domblkinfo demoguest /dev/hda2
  Capacity:       1048576000
  Allocation:     104857600
  Physical:       104857600

* tools/virsh.c: Implement domblkinfo command mapping to the
  new virDomainGetBlockInfo API

--- a/tools/virsh.pod
+++ b/tools/virsh.pod
@@ -296,6 +296,10 @@ Get network interface stats for a running domain.
 
 Get memory stats for a running domain.
 
+=item B<domblkinfo> I<domain> I<block-device>
+
+Get block device size info for a domain.
+
 =item B<dominfo> I<domain-id>
 
 Returns basic information about the domain.
