maint: update AUTHORS with recent contributors
git shortlog $(git log -1 --format=%H AUTHORS).. | grep -v "^ "

then add missing entries to AUTHORS.

* AUTHORS: Update.

--- a/AUTHORS
+++ b/AUTHORS
@@ -105,6 +105,10 @@ Patches have also been contributed by:
   Ryan Harper          <ryanh@us.ibm.com>
   Spencer Shimko       <sshimko@tresys.com>
   Marco Bozzolan       <bozzolan@gmail.com>
+  Alex Williamson      <alex.williamson@redhat.com>
+  Ersek Laszlo         <lacos@caesar.elte.hu>
+  Kenneth Nagin        <NAGIN@il.ibm.com>
+  Klaus Ethgen         <Klaus@Ethgen.de>
 
   [....send patches to get your name here....]
 
